--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </nav>
       <ul class="auth-list">
         <li class="auth-list-item">
-          <a href="mailto:info@devstudio.com" class="auth-list-link current"
+          <a href="mailto:info@devstudio.com" class="auth-list-link"
             >info@devstudio.com</a
           >
         </li>
@@ -47,16 +47,16 @@
     <!-- Main  part -->
     <main>
       <!--Шапка/Герой-->
-      <div class="hero-section">
-        <section>
+      <section class="hero-section">
+        <div>
           <h1 class="hero-section-title">
             Эффективные решения для вашего бизнеса
           </h1>
           <button type="button" class="hero-section-button">
             Заказать услугу
           </button>
-        </section>
-      </div>
+        </div>
+      </section>
       <!--Особенности-->
       <section>
         <h2>Наши особенности</h2>
@@ -166,10 +166,9 @@
       </section>
     </main>
     <!--Подвал-->
-    <footer class="footer-list">
-      <a href="" class="footer-list-logo"
-        ><span class="footer-list-part-logo">Web</span
-        ><span class="footer-list-part-logo right">Studio</span></a
+    <footer class="footer">
+      <a href="" class="footer-logo"
+        ><span class="footer-logo-part">Web</span>Studio></a
       >
       <address>
         <ul class="address-list">
