--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,12 @@
       <nav>
         <ul class="nav-list">
           <li class="nav-list-item">
-            <a href="" class="nav-list-link current">Студия</a>
+            <a href="./index.html" class="nav-list-link">Студия</a>
           </li>
           <li class="nav-list-item">
-            <a href="./portfolio.html" class="nav-list-link">Портфолио</a>
+            <a href="./portfolio.html" class="nav-list-link current"
+              >Портфолио</a
+            >
           </li>
           <li class="nav-list-item">
             <a href="" class="nav-list-link">Контакты</a>
@@ -33,7 +35,7 @@
       </nav>
       <ul class="auth-list">
         <li class="auth-list-item">
-          <a href="mailto:info@devstudio.com" class="auth-list-link current"
+          <a href="mailto:info@devstudio.com" class="auth-list-link"
             >info@devstudio.com</a
           >
         </li>
@@ -76,9 +78,10 @@
                 src="./Images/portfolio1.jpg"
                 alt="View Tekhnokryak"
                 width="370"
-            /></a>
-            <h2 class="project-list-title">Технокряк</h2>
-            <p class="project-list-text">Веб-сайт</p>
+              />
+              <h2 class="project-list-title">Технокряк</h2>
+              <p class="project-list-text">Веб-сайт</p>
+            </a>
           </li>
           <li class="project-list-item">
             <a class="project-list-link"
@@ -86,9 +89,12 @@
                 src="./Images/portfolio2.jpg"
                 alt="View New Orlean vs Golden Star"
                 width="370"
-            /></a>
-            <h2 class="project-list-title">Постер New Orlean vs Golden Star</h2>
-            <p class="project-list-text">Дизайн</p>
+              />
+              <h2 class="project-list-title">
+                Постер New Orlean vs Golden Star
+              </h2>
+              <p class="project-list-text">Дизайн</p>
+            </a>
           </li>
           <li class="project-list-item">
             <a class="project-list-link"
@@ -96,9 +102,10 @@
                 src="./Images/portfolio3.jpg"
                 alt="View Restaurant Seafood"
                 width="370"
-            /></a>
-            <h2 class="project-list-title">Ресторан Seafood</h2>
-            <p class="project-list-text">Приложение</p>
+              />
+              <h2 class="project-list-title">Ресторан Seafood</h2>
+              <p class="project-list-text">Приложение</p>
+            </a>
           </li>
           <li class="project-list-item">
             <a class="project-list-link"
@@ -106,9 +113,10 @@
                 src="./Images/portfolio4.jpg"
                 alt="View Project Prime"
                 width="370"
-            /></a>
-            <h2 class="project-list-title">Проект Prime</h2>
-            <p class="project-list-text">Маркетинг</p>
+              />
+              <h2 class="project-list-title">Проект Prime</h2>
+              <p class="project-list-text">Маркетинг</p>
+            </a>
           </li>
           <li class="project-list-item">
             <a class="project-list-link"
@@ -116,9 +124,10 @@
                 src="./Images/portfolio5.jpg"
                 alt="View Project Boxes"
                 width="370"
-            /></a>
-            <h2 class="project-list-title">Проект Boxes</h2>
-            <p class="project-list-text">Приложение</p>
+              />
+              <h2 class="project-list-title">Проект Boxes</h2>
+              <p class="project-list-text">Приложение</p>
+            </a>
           </li>
           <li class="project-list-item">
             <a class="project-list-link"
@@ -126,9 +135,10 @@
                 src="./Images/portfolio6.jpg"
                 alt="View Inspiration has no Borders"
                 width="370"
-            /></a>
-            <h2 class="project-list-title">Inspiration has no Borders</h2>
-            <p class="project-list-text">Веб-сайт</p>
+              />
+              <h2 class="project-list-title">Inspiration has no Borders</h2>
+              <p class="project-list-text">Веб-сайт</p>
+            </a>
           </li>
           <li class="project-list-item">
             <a class="project-list-link"
@@ -136,9 +146,10 @@
                 src="./Images/portfolio7.jpg"
                 alt="View Izdanie Limited Edition"
                 width="370"
-            /></a>
-            <h2 class="project-list-title">Издание Limited Edition</h2>
-            <p class="project-list-text">Дизайн</p>
+              />
+              <h2 class="project-list-title">Издание Limited Edition</h2>
+              <p class="project-list-text">Дизайн</p>
+            </a>
           </li>
           <li class="project-list-item">
             <a class="project-list-link"
@@ -146,9 +157,10 @@
                 src="./Images/portfolio8.jpg"
                 alt="View Project LAB"
                 width="370"
-            /></a>
-            <h2 class="project-list-title">Проект LAB</h2>
-            <p class="project-list-text">Маркетинг</p>
+              />
+              <h2 class="project-list-title">Проект LAB</h2>
+              <p class="project-list-text">Маркетинг</p>
+            </a>
           </li>
           <li class="project-list-item">
             <a class="project-list-link"
@@ -156,18 +168,18 @@
                 src="./Images/portfolio9.jpg"
                 alt="View Growing Business"
                 width="370"
-            /></a>
-            <h2 class="project-list-title">Growing Business</h2>
-            <p class="project-list-text">Приложение</p>
+              />
+              <h2 class="project-list-title">Growing Business</h2>
+              <p class="project-list-text">Приложение</p>
+            </a>
           </li>
         </ul>
       </section>
     </main>
     <!--Подвал-->
-    <footer class="footer-list">
-      <a href="" class="footer-list-logo"
-        ><span class="footer-list-part-logo">Web</span
-        ><span class="footer-list-part-logo right">Studio</span></a
+    <footer class="footer">
+      <a href="" class="footer-logo"
+        ><span class="footer-logo-part">Web</span>Studio></a
       >
       <address>
         <ul class="address-list">
