--- a/portfolio.html
+++ b/portfolio.html
@@ -179,7 +179,7 @@
     <!--Подвал-->
     <footer class="footer">
       <a href="" class="footer-logo"
-        ><span class="footer-logo-part">Web</span>Studio></a
+        ><span class="footer-logo-part">Web</span>Studio</a
       >
       <address>
         <ul class="address-list">
