--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
     <!--Подвал-->
     <footer class="footer">
       <a href="" class="footer-logo"
-        ><span class="footer-logo-part">Web</span>Studio</a
-      >
+        ><span class="footer-logo-part">Web</span>Studio
+      </a>
       <address>
         <ul class="address-list">
           <li class="address-list-item">
