--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <!--Верхняя линия-->
     <header class="header-list">
       <a href="" class="header-list-logo"
-        ><span class="header-list-part-logo">Web</span>Studio</a
+        ><span class="header-list-logo-part">Web</span>Studio</a
       >
       <nav>
         <ul class="nav-list">
